--- a/kaggle-container/requirements.txt
+++ b/kaggle-container/requirements.txt
@@ -1,8 +1,17 @@
 matplotlib
 seaborn
+scikit-learn
 pandas
 numpy
+semopy
 pymc3
 arviz
+pydotplus
+factor_analyzer
+graphviz
 torch
-torch-vision
+torchvision
+torchsummary
+kaggle
+elasticsearch[async]
+tornado
